<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/start_animations"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMarginStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/txtAcelerateAndDecelerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/acelerate_and_decelerate"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

    <ImageView
        android:id="@+id/imageOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/shape_teal"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@id/txtAcelerateAndDecelerate" />

    <TextView
        android:id="@+id/txtAcelerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/acelerate"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@+id/imageOne" />

    <ImageView
        android:id="@+id/imageTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/shape_teal"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@id/txtAcelerate" />

    <TextView
        android:id="@+id/txtDecelerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/decelerate_and_change_color_when_animation_start"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@+id/imageTwo" />

    <ImageView
        android:id="@+id/imageThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_teal"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@id/txtDecelerate" />

    <TextView
        android:id="@+id/txtRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/repeat_with_reverse"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@+id/imageThree" />

    <ImageView
        android:id="@+id/imageFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/shape_teal"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@id/txtRepeat" />

    <TextView
        android:id="@+id/txtRotate360"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rotate_360"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@+id/imageFour" />

    <TextView
        android:id="@+id/txtRotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rotation_text_view"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@+id/txtRotate360" />

    <TextView
        android:id="@+id/txtContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/container_with_translation_y"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@+id/txtRotation" />

    <LinearLayout
        android:id="@+id/containerImages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guidelineMarginStart"
        app:layout_constraintTop_toBottomOf="@id/txtContainer">

        <ImageView
            android:id="@+id/imageFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

        <ImageView
            android:id="@+id/imageSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

        <ImageView
            android:id="@+id/imageSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

        <ImageView
            android:id="@+id/imageEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

        <ImageView
            android:id="@+id/imageNine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

        <ImageView
            android:id="@+id/imageTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

        <ImageView
            android:id="@+id/imageEleven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

        <ImageView
            android:id="@+id/imageTwelve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/shape_teal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>